question 7
