# public/swagger.json
@@ -402,6 +402,41 @@
 				]
 			}
 		},
+		"/games/{id}/reviews": {
+			"get": {
+				"operationId": "GetReviewsByGameId",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/ReviewDTO"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Games"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
 		"/consoles": {
 			"get": {
 				"operationId": "GetAllConsole",
